Periodic merge of REST API to master (#63)
* Set Travis link for restapi branch builds

* Use consistent name for bot

* Bumped up Gradle wrapper to 3.1

* Bumped up Gradle wrapper to 3.1

* Added Gradle build scan

* Enabled parallel execution for Gradle

* Set Travis link for master merge

* Set Travis link back for restapi branch

* Nuked gitter badge

* Yay! First integration between UI Server and running bot successful :-)

* Update to Spring Boot 1.5.4

* README Architecture diagram polish

* Disabled http port - REST API is not ready yet

* Cleanup after FindBugs run - nothing serious, just inefficient code etc

* Cleanup after IntelliJ inspection run - nothing serious, just inefficient code etc

* Removed redundant oauth2 libs

* More REST API build and cleanup

* Security model cleanup
* Re-instated most of REST API tests - some still need adapting
* Removed unused jpa and hsqldb libs