@@ -80,7 +80,7 @@ public class TestTradingEngine {
     // Exchange Adapter config
     private static final String EXCHANGE_ADAPTER_IMPL_CLASS = "com.my.adapters.DummyBtceExchangeAdapter";
     private static final String EXCHANGE_NAME = "BTC-e";
-    private static final Integer EXCHANGE_ADAPTER_NETWORK_TIMEOUT = new Integer("30");
+    private static final Integer EXCHANGE_ADAPTER_NETWORK_TIMEOUT = Integer.valueOf("30");
     private static final List<Integer> EXCHANGE_ADAPTER_NONFATAL_ERROR_CODES = Arrays.asList(502, 503, 504);
     private static final List<String> EXCHANGE_ADAPTER_NONFATAL_ERROR_MESSAGES = Arrays.asList(
             "Connection reset",
@@ -180,7 +180,7 @@ public class TestTradingEngine {
         tradingEngine.start();
 
         // sleep for bit then and check if shutdown ok
-        Thread.sleep(1 * 1000);
+        Thread.sleep(1000);
         assertFalse(tradingEngine.isRunning());
 
         PowerMock.verifyAll();
@@ -192,9 +192,6 @@ public class TestTradingEngine {
         setupConfigLoadingExpectationsForNoEmergencyStopCheck();
 
         final int numberOfTradeCycles = 1;
-        final Map<String, BigDecimal> balancesAvailable = new HashMap<>();
-        // Emergency stop check disabled, i.e. ZERO
-        balancesAvailable.put(ENGINE_EMERGENCY_STOP_CURRENCY, BigDecimal.ZERO);
 
         // expect Trading Strategy to be invoked at least 1 time
         tradingStrategy.execute();
@@ -216,7 +213,7 @@ public class TestTradingEngine {
         tradingEngine.shutdown();
 
         // sleep for 1s and check if shutdown ok
-        Thread.sleep(1 * 1000);
+        Thread.sleep(1000);
         assertFalse(tradingEngine.isRunning());
 
         PowerMock.verifyAll();
@@ -261,7 +258,7 @@ public class TestTradingEngine {
         tradingEngine.shutdown();
 
         // sleep for 1s and check if shutdown ok
-        Thread.sleep(1 * 1000);
+        Thread.sleep(1000);
         assertFalse(tradingEngine.isRunning());
 
         PowerMock.verifyAll();
@@ -305,7 +302,7 @@ public class TestTradingEngine {
         tradingEngine.start();
 
         // sleep for 1s and check if shutdown ok
-        Thread.sleep(1 * 1000);
+        Thread.sleep(1000);
         assertFalse(tradingEngine.isRunning());
 
         PowerMock.verifyAll();
@@ -349,7 +346,7 @@ public class TestTradingEngine {
         tradingEngine.start();
 
         // sleep for 1s and check if shutdown ok
-        Thread.sleep(1 * 1000);
+        Thread.sleep(1000);
         assertFalse(tradingEngine.isRunning());
 
         PowerMock.verifyAll();
@@ -390,7 +387,7 @@ public class TestTradingEngine {
         tradingEngine.start();
 
         // sleep for 1s and check if shutdown ok
-        Thread.sleep(1 * 1000);
+        Thread.sleep(1000);
         assertFalse(tradingEngine.isRunning());
 
         PowerMock.verifyAll();
@@ -431,7 +428,7 @@ public class TestTradingEngine {
         tradingEngine.start();
 
         // sleep for 1s and check if shutdown ok
-        Thread.sleep(1 * 1000);
+        Thread.sleep(1000);
         assertFalse(tradingEngine.isRunning());
 
         PowerMock.verifyAll();
@@ -481,7 +478,7 @@ public class TestTradingEngine {
         tradingEngine.shutdown();
 
         // sleep for 1s and check if shutdown ok
-        Thread.sleep(1 * 1000);
+        Thread.sleep(1000);
         assertFalse(tradingEngine.isRunning());
 
         PowerMock.verifyAll();
@@ -530,35 +527,35 @@ public class TestTradingEngine {
     //  private utils
     // ------------------------------------------------------------------------------------------------
 
-    private void setupExchangeAdapterConfigExpectations() throws Exception {
+    private void setupExchangeAdapterConfigExpectations() {
         expect(exchangeConfigRepository.getConfig()).andReturn(someExchangeConfig());
         expect(ConfigurableComponentFactory.createComponent(EXCHANGE_ADAPTER_IMPL_CLASS)).andReturn(exchangeAdapter);
         expect(exchangeAdapter.getImplName()).andReturn(EXCHANGE_NAME);
         exchangeAdapter.init(anyObject(ExchangeConfig.class));
     }
 
-    private void setupEngineConfigExpectations() throws Exception {
+    private void setupEngineConfigExpectations() {
         expect(engineConfigRepository.getConfig()).andReturn(someEngineConfig());
     }
 
-    private void setupEngineConfigForNoEmergencyStopCheckExpectations() throws Exception {
+    private void setupEngineConfigForNoEmergencyStopCheckExpectations() {
         expect(engineConfigRepository.getConfig()).andReturn(someEngineConfigForNoEmergencyStopCheck());
     }
 
-    private void setupStrategyAndMarketConfigExpectations() throws Exception {
+    private void setupStrategyAndMarketConfigExpectations() {
         expect(strategyConfigRepository.findAllStrategies()).andReturn(allTheStrategiesConfig());
         expect(marketConfigRepository.findAllMarkets()).andReturn(allTheMarketsConfig());
         expect(ConfigurableComponentFactory.createComponent(STRATEGY_IMPL_CLASS)).andReturn(tradingStrategy);
         tradingStrategy.init(eq(exchangeAdapter), anyObject(Market.class), anyObject(com.gazbert.bxbot.strategy.api.StrategyConfig.class));
     }
 
-    private void setupConfigLoadingExpectations() throws Exception {
+    private void setupConfigLoadingExpectations() {
         setupExchangeAdapterConfigExpectations();
         setupEngineConfigExpectations();
         setupStrategyAndMarketConfigExpectations();
     }
 
-    private void setupConfigLoadingExpectationsForNoEmergencyStopCheck() throws Exception {
+    private void setupConfigLoadingExpectationsForNoEmergencyStopCheck() {
         setupExchangeAdapterConfigExpectations();
         setupEngineConfigForNoEmergencyStopCheckExpectations();
         setupStrategyAndMarketConfigExpectations();
